# IN3110

./: README.md
assignment-1/: friendly_greeting.txt  less_friendly_greeting.txt  myfirstcommit.txt
assignment-2/: README.MD  array_class.py  test_array.py
assignment-3/: README.md  pyproject.toml  timing-report.txt
assignment-3/instapy/: __main__.py  cli.py  io.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment-3/instapy.egg-info/: PKG-INFO
assignment-3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  example-plot.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py
assignment4/tests/: test_requesting_urls.py  test_time_planner.py
assignment5/: README.md  http_cache.sqlite  strompris.py
